--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,8 +19,17 @@ jobs:
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v2
 
-    - name: Restore NuGet packages
+    - name: Restore packages
       run: nuget restore StellaSora-Tool.sln
 
-    - name: Build solution
+    - name: Build (Release x64)
       run: msbuild StellaSora-Tool.sln /p:Configuration=Release /p:Platform=x64
+
+    - name: List DLL output
+      run: dir -Recurse -Filter *.dll
+
+    - name: Upload DLL artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: StellaSora-DLL
+        path: '**/*.dll'
